--- a/README
+++ b/README
@@ -1,1 +1,83 @@
-tamesini
+README
+
+
+【ソフト名】Prime
+【課題名】11. 実行時に与えられた2つの非負整数値の
+　　　　　範囲内の"素数"を出力するプログラムを作成する。
+【著作権者】加茂優作
+【制作日】平成２４年２月２４日～平成２４年２月２７日
+【種別】素数計算プログラム
+【動作環境】Windows7
+【開発環境】MINGW32
+
+
+書くこと書いたので、以下、感想とともに反省会↓↓↓↓　　　　※読まなくてもいいですよ！
+
+
+Q.なぜmain.cppしかないの？
+
+他にも作ろうとしたんですけどまだ.hppの構造を理解していなかったとか
+最初作ったときにVisual C++2010で開発してたんだけど、hppをincludeしたときに
+不具合が起きてVisual C++なんか使うもんか！と心に決め、MINGWに浮気しました。
+で、その名残のまんまmain.cppしかありません。
+
+
+Q.実際苦労したのは？
+
+vectorのeraseですね。それ以外になにも言うことはありません。
+なんであのメソッド使った後イテレータ進んでんの？どゆことー
+vectorのポインタもいろいろ悩みました。
+Σ(ﾟДﾟ)え！？vectorと::iteratorて違うのん！？
+
+
+Q.色んなメソッド使えるけど使わないの？評価あがるかもよ？
+
+moveとかラムダ式とか使いたかったんですけどねぇ・・・前者は使いどころが
+分かりませんでした。(ｷｯﾊﾟﾘ　
+理解はしてるつもりでしたけれども、どう使おうか悩みました。後者はこれもMINGWの
+不具合か実行時オプションのせいか上手く動作してくれず・・・どうせ動いてくれなきゃ
+使わなきゃいいのスタンスで使いませんでした。
+
+
+Q.Githubについてなにか
+
+アカウント取るところから苦労しました。英語なんて全然の私が雰囲気だけで
+なんとかファイル作成まで進めることができました！やったね！
+commitが全然上手くいかんくてeditで編集してるけどそれは内緒。
+
+
+Q.ちょっとこれ結果でないんだけどどういうこと？
+
+範囲外の数字を入力するとなんか違うところのメモリを参照しちゃうみたいで
+その辺は理解できなかったのでそのままです。大人しく範囲内の数字を入力してください。
+あと仕様には「実行時に与えられた２つの数字」と書いてあるのだけれども
+エラトステネスのふるいを参考にした結果、MINの値を変えると正常な結果がでないのでそのままで。
+
+
+Q.反省点ばっかりだから成功点を聞きたいな
+
+vectorという壁を乗り越えられた(？)のは自分にとって大きな一歩だと思います。
+上手く動作してくれたときはガッツポーズ取りましたね！ε=＼＿〇ノﾋｬｯﾎｰｲ!!
+ポインタも最初はちんぷんかんぷんだったけど先生が説明してくれてたのを
+思い出して、ごり押しでいけました！あと、エラトステネスのふるいが便利で
+すごい活用した！考えを整頓するのに超便利だった！
+
+
+Q.C++を学んでの感想をどうぞ
+
+ほんとに奥が深いものだなぁと知りました。Javaをやっていたのである程度まで
+わかっていたつもりだったんですけど。全くといっていいほど書き方が違くて、
+焦りました。みんなはFoobarゲームできてたのに自分だけ追いつけなくて
+そうとう焦りましたね。ええ。でもなんとかここまで成長することができました！
+凸凹な道だけど歩いてきた道を見直すと、とても長くて。まだまだ奥深いC++だけど
+また機会があったら学んでみようかと思います！会社には必須だと思うけどね！
+
+
+Q.最後になにか一言
+
+どうもすみませんでした。あと、この文を最後まで読んでくれてありがとうございます。
+
+
+Q.これ書いてる時間を開発にまわせばよかったんじゃ・・・
+
+おっとそれ以上は禁句（タブー）ですぜ。旦那。
