--- a/README
+++ b/README
@@ -69,6 +69,7 @@ Q.C++を学んでの感想をどうぞ
 わかっていたつもりだったんですけど。全くといっていいほど書き方が違くて、
 焦りました。みんなはFoobarゲームできてたのに自分だけ追いつけなくて
 そうとう焦りましたね。ええ。でもなんとかここまで成長することができました！
+先生にメールで聞かなかったのも自分の力だけでどこまでやれるか見たかったからです。
 凸凹な道だけど歩いてきた道を見直すと、とても長くて。まだまだ奥深いC++だけど
 また機会があったら学んでみようかと思います！会社には必須だと思うけどね！
 
