--- a/README
+++ b/README
@@ -46,7 +46,7 @@ Q.Githubについてなにか
 commitが全然上手くいかんくてeditで編集してるけどそれは内緒。
 
 
-Q.ちょっとこれ結果でないんだけどどういうこと？
+Q.ちょっとこれ仕様と違うんだけどどういうこと？
 
 範囲外の数字を入力するとなんか違うところのメモリを参照しちゃうみたいで
 その辺は理解できなかったのでそのままです。大人しく範囲内の数字を入力してください。
